--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -2,7 +2,7 @@ AM_FCFLAGS = -I../base -I../grib -I../volgrid6d -I../vol7d -I../qc -I../termolib
 EXTRA_DIST = log4crc
 bin_PROGRAMS =
 
-noinst_PROGRAMS = esempio_file_utilities esempio_v7d esempio_v7d_compute esempio_termolib log4fortran example_char_utilities
+noinst_PROGRAMS = esempio_file_utilities esempio_v7d esempio_v7d_compute esempio_termolib log4fortran example_optionparser example_char_utilities
 
 esempio_file_utilities_SOURCES = esempio_file_utilities.f90
 esempio_file_utilities_LDADD = ../base/libsim_base.la
@@ -19,8 +19,8 @@ esempio_termolib_LDADD = ../base/libsim_base.la ../termolib/libsim_termolib.la
 log4fortran_SOURCES = log4fortran.f90
 log4fortran_LDADD =  ../log4fortran/liblog4fortran.la ../base/libsim_base.la
 
-# example_getopt_SOURCES = example_getopt.f90
-# example_getopt_LDADD =  ../log4fortran/liblog4fortran.la ../base/libsim_base.la
+example_optionparser_SOURCES = example_optionparser.f90
+example_optionparser_LDADD =  ../log4fortran/liblog4fortran.la ../base/libsim_base.la
 
 example_char_utilities_SOURCES = example_char_utilities.f90
 example_char_utilities_LDADD =   ../base/libsim_base.la
